--- a/pre paid/index.html
+++ b/pre paid/index.html
@@ -431,7 +431,7 @@
         </div> 
 <!------------------------------------bsnl----------------------------------------->
 <nav class="sim" id="bsnl1">
-    <ul class="navsim">
+    <ul class="nav-links">
         <li><a href="#bsnl1">bsnl</a></li>
         <li><a href="#data3">Data</a></li>
         <li><a href="#truly unlimited3">truly unlimited</a></li>
