--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+        
 </head>
 
 <body>
+
     <header class="header">
+        <?php include('cards.php'); ?>
     <nav class="navbar">
         <ul class="nav-links">
             <li class="nav-items"><a href="#airtel1">airtel</a></li>
@@ -104,7 +106,7 @@
                     <img src="images/Airtel-Logo.png" alt="Your Image"
                         style="max-width: 100px; display: block; margin: 0 auto;">
                     <h2>Data</h2>
-                    <p>data: 2GB</p>
+                    <p>data: GB</p>
                     <p>validity: 1 day</p>
                     <div class="containers">
                         <button onclick="toggleDescription(this)">view more</button>
