--- a/postpaid/index.html
+++ b/postpaid/index.html
@@ -14,7 +14,7 @@
         <ul class="nav-links">
             <li class="nav-items"><a href="#home">HOME</a></li>
             <li class="nav-items"><a href="#postpaid">POSTPAID</a></li>
-            <li class="nav-items"><a href="pre paid">PREPAID</a></li>
+            <li class="nav-items"><a href="C:/Users/CHAITRA R/OneDrive/Desktop/pre paid/index.html">PREPAID</a></li>
             <li class="nav-items"><a href="#coveragemaps">COVERAGE MAP</a></li>
             <li><input type="text" class="search-box" placeholder="filter"></li>
 
