--- a/HOME/postpaid1/index.html
+++ b/HOME/postpaid1/index.html
@@ -12,9 +12,9 @@
 
     <nav class="navbar">
         <ul class="nav-links">
-            <li class="nav-items"><a href="D:/PPbpa/telecom/postpaid/index.html">HOME</a></li>
+            <li class="nav-items"><a href="D:/PPbpa/telecom/HOME/index.html">HOME</a></li>
             <li class="nav-items"><a href="#postpaid">POSTPAID</a></li>
-            <li class="nav-items"><a href="C:/Users/CHAITRA R/OneDrive/Desktop/pre paid/index.html">PREPAID</a></li>
+            <li class="nav-items"><a href="D:/PPbpa/telecom/HOME/prepaid/index.html">PREPAID</a></li>
             <li class="nav-items"><a href="#coveragemaps">COVERAGE MAP</a></li>
             <li><input type="text" class="search-box" placeholder="filter"></li>
 
