--- a/HOME/index.html
+++ b/HOME/index.html
@@ -13,8 +13,8 @@
     <nav class="navbar">
         <ul class="nav-links">
             <li class="nav-items"><a href="#home">HOME</a></li>
-            <li class="nav-items"><a href="C:/Users/CHAITRA R/OneDrive/Desktop/postpaid1/index.html">POSTPAID</a></li>
-            <li class="nav-items"><a href="C:/Users/CHAITRA R/OneDrive/Desktop/pre paid/index.html">PREPAID</a></li>
+            <li class="nav-items"><a href="D:/PPbpa/telecom/HOME/postpaid1/index.html">POSTPAID</a></li>
+            <li class="nav-items"><a href="D:/PPbpa/telecom/HOME/prepaid/index.html">PREPAID</a></li>
             <li class="nav-items"><a href="#coveragemaps">COVERAGE MAP</a></li>
             <li><input type="text" class="search-box" placeholder="filter"></li>
 
