popup card updated

--- a/service.html
+++ b/service.html
@@ -61,7 +61,7 @@
         }
 
         .service-wrap:hover {
-            background-image: url(https://i.ibb.co/mykzQks/services1.jpg);
+            background-image: url(images/back.avif);
             background-size: cover;
             background-position: center center;
             background-attachment: local;
@@ -80,7 +80,7 @@
 
         .service-wrap:hover h4,
         .service-wrap:hover p {
-            color: #fff;
+            color: #010000;
         }
 
         .service-wrap h4 {
